--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,11 @@ dependencies:
   firebase_auth: ^4.17.4
   google_nav_bar: ^5.0.6
   cloud_firestore: ^4.15.6
-  image_picker: ^1.0.7
+  image_picker: ^0.8.2
+  image_cropper: ^1.4.1
+  path_provider: ^2.0.2
+  flutter_image_compress: ^1.0.0
+  firebase_storage: ^11.6.10
 
 dev_dependencies:
   flutter_test:
@@ -50,7 +54,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
