--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   image_cropper: ^1.4.1
   path_provider: ^2.0.2
   flutter_image_compress: ^1.0.0
-  firebase_storage: ^11.6.10
+  firebase_storage: 11.6.9
 
 dev_dependencies:
   flutter_test:
