--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   path_provider: ^2.0.2
   flutter_image_compress: ^1.0.0
   firebase_storage: 11.6.9
+  provider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
