--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   firebase_storage: 11.6.9
   provider: ^5.0.0
   flutter_animate: ^4.5.0
+  table_calendar: ^3.1.0
 
 dev_dependencies:
   flutter_test:
