--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  photo_manager: ^3.0.0
   cupertino_icons: ^1.0.2
   firebase_core: ^2.25.4
   firebase_auth: ^4.17.4
@@ -49,6 +50,9 @@ dependencies:
   table_calendar: ^3.1.0
   uuid: ^4.3.3
   intl: ^0.19.0
+  photo_manager_image_provider: ^2.1.1
+  transparent_image: ^2.0.1
+  permission_handler: ^11.3.0
 
 dev_dependencies:
   flutter_test:
