--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   photo_manager_image_provider: ^2.1.1
   transparent_image: ^2.0.1
   permission_handler: ^11.3.0
+  cached_network_image: ^3.3.1
 
 dev_dependencies:
   flutter_test:
