--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   transparent_image: ^2.0.1
   permission_handler: ^11.3.0
   cached_network_image: ^3.3.1
+  video_player: ^2.8.3
 
 dev_dependencies:
   flutter_test:
