--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   permission_handler: ^11.3.0
   cached_network_image: ^3.3.1
   video_player: ^2.8.3
+  smooth_list_view: ^1.0.4
 
 dev_dependencies:
   flutter_test:
