--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,9 @@ dependencies:
   cached_network_image: ^3.3.1
   video_player: ^2.8.3
   smooth_list_view: ^1.0.4
+  geolocator: ^11.0.0
+  geocoding: ^3.0.0
+  lottie: ^3.1.0
 
 dev_dependencies:
   flutter_test:
