--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,8 @@ dependencies:
   geocoding: ^3.0.0
   lottie: ^3.1.0
   appinio_video_player: ^1.2.2
+  flutter_carousel_widget: ^2.2.0
+
 
 
 dev_dependencies:
