--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,7 +61,7 @@ dependencies:
   lottie: ^3.1.0
   appinio_video_player: ^1.2.2
   flutter_carousel_widget: ^2.2.0
-
+  badges: ^3.1.2
 
 
 dev_dependencies:
