--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   appinio_video_player: ^1.2.2
   flutter_carousel_widget: ^2.2.0
   badges: ^3.1.2
+  google_maps_flutter: ^2.6.0
 
 
 dev_dependencies:
