--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,8 +62,9 @@ dependencies:
   appinio_video_player: ^1.2.2
   flutter_carousel_widget: ^2.2.0
   badges: ^3.1.2
-  google_maps_flutter: ^2.6.0
+  google_maps_flutter: ^2.2.1
   encrypt: ^5.0.3
+  location: ^6.0.1
 
 
 dev_dependencies:
