--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,7 +65,7 @@ dependencies:
   google_maps_flutter: ^2.2.1
   encrypt: ^5.0.3
   location: ^6.0.1
-
+  external_app_launcher: ^4.0.0
 
 dev_dependencies:
   flutter_test:
