--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,7 @@ dependencies:
   path_provider: ^2.0.2
   flutter_image_compress: ^1.0.0
   firebase_storage: 11.6.9
-  provider: ^5.0.0
+  provider: ^6.0.3
   flutter_animate: ^4.5.0
   table_calendar: ^3.1.0
   uuid: ^4.3.3
@@ -66,6 +66,8 @@ dependencies:
   encrypt: ^5.0.3
   location: ^6.0.1
   external_app_launcher: ^4.0.0
+  smooth_scroll_multiplatform: ^1.0.8
+  flick_video_player: ^0.7.0
 
 dev_dependencies:
   flutter_test:
