--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -65,4 +65,9 @@ flutter {
     source '../..'
 }
 
-dependencies {}
+dependencies {
+        coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
+    implementation 'androidx.window:window:1.0.0'
+    implementation 'androidx.window:window-java:1.0.0'
+    implementation 'com.android.support:multidex:1.0.3'
+}
