--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ dependencies:
   flick_video_player: ^0.7.0
   firebase_messaging: ^14.9.1
   flutter_local_notifications: ^17.1.1
+  photo_view: ^0.15.0
 
 dev_dependencies:
   flutter_test:
