--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ dependencies:
   flutter_local_notifications: ^17.1.1
   smooth_page_indicator: ^1.1.0
   photo_view: ^0.15.0
+  google_generative_ai: ^0.4.0
 
 dev_dependencies:
   flutter_test:
