--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,10 @@ dependencies:
   smooth_page_indicator: ^1.1.0
   photo_view: ^0.15.0
   google_generative_ai: ^0.4.0
+  get: any
+  flutter_osm_plugin: any
+  fluttertoast: ^8.2.5
+  pointer_interceptor: ^0.10.1+1
 
 dev_dependencies:
   flutter_test:
